# s-cargot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  s-cargot.cabal  s-expression.cabal
.github/workflows/: haskell-ci.yml
Data/: SCargot.hs
Data/SCargot/: Atom.hs  Basic.hs  Comments.hs  Common.hs  CommonLisp.hs  Foo.hs  General.hs  HaskLike.hs  LetBind.hs  Parse.hs  Pretty.hs  Print.hs  Repr.hs  Rivest.hs  Tutorial.hs
Data/SCargot/Language/: Basic.hs  HaskLike.hs
Data/SCargot/Repr/: Basic.hs  Rich.hs  WellFormed.hs
Data/SCargot/Scheme/: Common.hs  R7RS.hs
Data/SExpression/: CommonLisp.hs  General.hs  Repr.hs  Rivest.hs  Tutorial.hs
Data/SExpression/Repr/: Rich.hs  WellFormed.hs
example/: example.hs
test/: SCargotPrintParse.hs  SCargotQC.hs  big-sample.sexp  med-sample.sexp  med2-sample.sexp  sample.sexp  small-sample.sexp
